--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ GOOGLE_CLIENT_ID=1086394684058-7akqc620cd0bkjoi8bqac4b3ghohakd2.apps.googleuserc
 GOOGLE_CLIENT_SECRET=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
 ADMIN_EMAIL=omkarkangule04@gmail.com
 ADMIN_PASSWORD=Omkar@2005
+CLOUDINARY_CLOUD_NAME=djtrctbdy
+CLOUDINARY_API_KEY=348968375949625
+CLOUDINARY_API_SECRET=z2nuaKBK_Zspvvk8IIDniRaj0QA
