--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,2 +1,2 @@
 VITE_GOOGLE_CLIENT_ID=1086394684058-mompqque4p4rj3o18l4r19a19rqhtp81.apps.googleusercontent.com
-VITE_API_URL=http://localhost:8000;
+VITE_API_URL=http://localhost:8000
