--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-oauth/google": "^0.12.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.1",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0"
