--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,23 @@
-GOOGLE_CLIENT_ID=1086394684058-7akqc620cd0bkjoi8bqac4b3ghohakd2.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+# Django Settings
+DJANGO_SECRET_KEY=your-secret-key-here-change-in-production
+DEBUG=True
+
+# Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=djtrctbdy
 CLOUDINARY_API_KEY=348968375949625
 CLOUDINARY_API_SECRET=z2nuaKBK_Zspvvk8IIDniRaj0QA
+
+# Google OAuth
+GOOGLE_CLIENT_ID=1086394684058-7akqc620cd0bkjoi8bqac4b3ghohakd2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+# Admin Credentials
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=your-admin-password
+
+# Email Configuration
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DEFAULT_FROM_EMAIL=no-reply@udyogworks.local
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
