--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,4 +35,4 @@ EXPOSE 8000
 
 # Run migrations and start server
 CMD python manage.py migrate && \
-    gunicorn backend.wsgi:application --bind 0.0.0.0:8000 --workers 2
+    gunicorn backend.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 2
