--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,5 +34,4 @@ RUN mkdir -p /app/logs
 EXPOSE 8000
 
 # Run migrations and start server
-CMD python manage.py migrate && \
-    gunicorn backend.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 2
+CMD ["sh", "-c", "python manage.py migrate && gunicorn backend.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 2"]
