--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Use Node 18 Alpine
-FROM node:18-alpine
+# Use Node 20 Alpine (Vite requires Node 20+)
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
