Add environment variable templates with production references

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,62 @@
-# Django Settings
-DJANGO_SECRET_KEY=your-secret-key-here-change-in-production
-DEBUG=True
+# Backend Environment Variables Template
+# Copy this file to .env and fill in your actual values
+# DO NOT commit .env file to git!
 
-# Cloudinary Configuration
+# Django Core
+DJANGO_SECRET_KEY=your-secret-key-here-generate-with-django
+DEBUG=False
+ALLOWED_HOSTS=your-domain.com,*.railway.app
+
+# Database (Railway will auto-populate)
+DATABASE_URL=${{Postgres.DATABASE_URL}}
+
+# Redis Cache (Railway will auto-populate)  
+REDIS_URL=${{Redis.REDIS_URL}}
+
+# CORS & CSRF (Frontend URLs)
+CORS_ALLOWED_ORIGINS=https://your-frontend-domain.com,https://your-vercel-app.vercel.app
+CSRF_TRUSTED_ORIGINS=https://your-frontend-domain.com,https://your-vercel-app.vercel.app
+FRONTEND_URL=https://your-frontend-domain.com
+
+# Cloudinary (Media Storage)
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
+# Google OAuth (Optional)
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
+# LinkedIn OAuth (Optional)
+LINKEDIN_CLIENT_ID=your-linkedin-client-id
+LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
 
-# Email Configuration
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-DEFAULT_FROM_EMAIL=no-reply@udyogworks.local
+# Email Configuration (Optional)
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=your-email@gmail.com
 
-# Frontend URL
-FRONTEND_URL=http://localhost:5173
+# Razorpay Payment Gateway (Optional)
+RAZORPAY_KEY_ID=your-razorpay-key-id
+RAZORPAY_KEY_SECRET=your-razorpay-key-secret
+RAZORPAY_WEBHOOK_SECRET=your-webhook-secret
+
+# Google Analytics (Optional)
+GA4_PROPERTY_ID=properties/your-property-id
+
+# Production Values for Reference:
+# DJANGO_SECRET_KEY=django-insecure-change-this-in-production-xyz123
+# DEBUG=False
+# ALLOWED_HOSTS=talented-determination-production-7954.up.railway.app,udyogworks.in,*.railway.app
+# CORS_ALLOWED_ORIGINS=https://agency-website-az9rbs68a-omkarkangule04-5166s-projects.vercel.app,https://udyogworks.in
+# CSRF_TRUSTED_ORIGINS=https://agency-website-az9rbs68a-omkarkangule04-5166s-projects.vercel.app,https://udyogworks.in
+# FRONTEND_URL=https://udyogworks.in
+# CLOUDINARY_CLOUD_NAME=djtrctbdy
+# CLOUDINARY_API_KEY=348968375949625
+# EMAIL_HOST_USER=sundartir8806@gmail.com
+# DEFAULT_FROM_EMAIL=udyogworks.official@gmail.com
+# GA4_PROPERTY_ID=properties/516753119
