--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,21 @@
-# OAuth Configuration
-VITE_GOOGLE_CLIENT_ID=1086394684058-mompqque4p4rj3o18l4r19a19rqhtp81.apps.googleusercontent.com
-VITE_LINKEDIN_CLIENT_ID=866djvbizv1zgs
+# Frontend Environment Variables Template
+# Copy this file to .env and fill in your actual values
+# These will be embedded in the build, so don't put secrets here!
 
-# API URL
-VITE_API_URL=http://localhost:8000
+# Backend API URL (NO trailing slash!)
+VITE_API_URL=https://your-backend-url.railway.app
+
+# Google OAuth Client ID
+VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+
+# LinkedIn OAuth Client ID  
+VITE_LINKEDIN_CLIENT_ID=your-linkedin-client-id
+
+# Google Analytics Measurement ID
+VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Production Values for Reference:
+# VITE_API_URL=https://talented-determination-production-7954.up.railway.app
+# VITE_GOOGLE_CLIENT_ID=1086394684058-snlngpk9ijggl079vecnv5djhruc9jum.apps.googleusercontent.com
+# VITE_LINKEDIN_CLIENT_ID=866djvbizv1zgs
+# VITE_GA_MEASUREMENT_ID=G-1VG5F2KFCN
