--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
+    "next-themes": "^0.4.6",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
