--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,10 +1,8 @@
-{
-  "providers": ["python"],
-  "buildCommand": "pip install -r requirements.txt",
-  "startCommand": "python manage.py migrate && gunicorn backend.wsgi:application --bind 0.0.0.0:$PORT",
-  "nixPkgs": [
-    "cairo",
-    "pango",
-    "gdk-pixbuf"
-  ]
-}
+[phases.setup]
+nixPkgs = ["cairo", "pango", "gdk-pixbuf"]
+
+[phases.build]
+cmds = ["pip install -r requirements.txt"]
+
+[start]
+cmd = "python manage.py migrate && gunicorn backend.wsgi:application --bind 0.0.0.0:$PORT"
