--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,2 +1,2 @@
 [phases.setup]
-nixPkgs = ["python310", "cairo", "pango", "gdk-pixbuf", "glib", "gcc"]
+nixPkgs = ["python310", "cairo", "cairo.dev", "pango", "gdk-pixbuf", "glib", "gcc", "pkg-config"]
