--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -79,6 +79,7 @@ pytz==2025.2
 PyYAML==6.0.3
 razorpay==1.4.1
 redis==5.2.1
+reportlab==4.4.7
 requests==2.32.5
 requests-oauthlib==2.0.0
 rsa==4.9.1
