pricing card fixes

--- a/backend/.env.payment_system
+++ b/backend/.env.payment_system
@@ -5,9 +5,10 @@
 # ============================================
 
 # Razorpay (Indian Payments - UPI, Cards, Netbanking)
-RAZORPAY_KEY_ID=your_razorpay_key_id_here
-RAZORPAY_KEY_SECRET=your_razorpay_secret_key_here
-RAZORPAY_WEBHOOK_SECRET=your_razorpay_webhook_secret_here
+RAZORPAY_KEY_ID="rzp_live_RxNm3YtNzVIZpW"
+RAZORPAY_KEY_SECRET="9jvYbn1Y3QE4kqUNmXJXXaz0"
+RAZORPAY_WEBHOOK_SECRET="9jvYbn1Y3QE4kqUNmXJXXaz0"
+
 
 # PayPal (International Payments)
 PAYPAL_CLIENT_ID=your_paypal_client_id_here
