--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,21 +1,10 @@
-# Frontend Environment Variables Template
-# Copy this file to .env and fill in your actual values
-# These will be embedded in the build, so don't put secrets here!
+# OAuth Configuration
+VITE_GOOGLE_CLIENT_ID=1086394684058-snlngpk9ijggl079vecnv5djhruc9jum.apps.googleusercontent.com
+VITE_LINKEDIN_CLIENT_ID=866djvbizv1zgs
 
-# Backend API URL (NO trailing slash!)
-VITE_API_URL=https://your-backend-url.railway.app
+# API URL
+VITE_API_URL=http://127.0.0.1:8000/
 
-# Google OAuth Client ID
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+VITE_GA_MEASUREMENT_ID=G-1VG5F2KFCN
 
-# LinkedIn OAuth Client ID  
-VITE_LINKEDIN_CLIENT_ID=your-linkedin-client-id
-
-# Google Analytics Measurement ID
-VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
-
-# Production Values for Reference:
-# VITE_API_URL=https://talented-determination-production-7954.up.railway.app
-# VITE_GOOGLE_CLIENT_ID=1086394684058-snlngpk9ijggl079vecnv5djhruc9jum.apps.googleusercontent.com
-# VITE_LINKEDIN_CLIENT_ID=866djvbizv1zgs
-# VITE_GA_MEASUREMENT_ID=G-1VG5F2KFCN
+VITE_FRONTEND_URL=http://localhost:5173
