--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,62 +1,49 @@
-# Backend Environment Variables Template
-# Copy this file to .env and fill in your actual values
-# DO NOT commit .env file to git!
+# Django Settings
+DJANGO_SECRET_KEY=your-secret-key-here-change-in-production
+DEBUG=True
 
-# Django Core
-DJANGO_SECRET_KEY=your-secret-key-here-generate-with-django
-DEBUG=False
-ALLOWED_HOSTS=your-domain.com,*.railway.app
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
 
-# Database (Railway will auto-populate)
-DATABASE_URL=${{Postgres.DATABASE_URL}}
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 
-# Redis Cache (Railway will auto-populate)  
-REDIS_URL=${{Redis.REDIS_URL}}
+# LinkedIn OAuth
+LINKEDIN_CLIENT_ID=your_linkedin_client_id
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
 
-# CORS & CSRF (Frontend URLs)
-CORS_ALLOWED_ORIGINS=https://your-frontend-domain.com,https://your-vercel-app.vercel.app
-CSRF_TRUSTED_ORIGINS=https://your-frontend-domain.com,https://your-vercel-app.vercel.app
-FRONTEND_URL=https://your-frontend-domain.com
+# Facebook OAuth
+FACEBOOK_APP_ID=your_facebook_app_id
+FACEBOOK_APP_SECRET=your_facebook_app_secret
 
-# Cloudinary (Media Storage)
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+# Instagram OAuth (uses Facebook)
+INSTAGRAM_APP_ID=your_instagram_app_id
+INSTAGRAM_APP_SECRET=your_instagram_app_secret
 
-# Google OAuth (Optional)
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# LinkedIn OAuth (Optional)
-LINKEDIN_CLIENT_ID=your-linkedin-client-id
-LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
+# Email Configuration
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DEFAULT_FROM_EMAIL=your_email@example.com
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_app_password
 
-# Email Configuration (Optional)
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-app-password
-DEFAULT_FROM_EMAIL=your-email@gmail.com
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
 
-# Razorpay Payment Gateway (Optional)
-RAZORPAY_KEY_ID=your-razorpay-key-id
-RAZORPAY_KEY_SECRET=your-razorpay-key-secret
-RAZORPAY_WEBHOOK_SECRET=your-webhook-secret
+DROPBOX_ACCESS_TOKEN=your_dropbox_access_token
 
-# Google Analytics (Optional)
-GA4_PROPERTY_ID=properties/your-property-id
+GA4_PROPERTY_ID=properties/your_property_id
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/credentials.json
 
-# Production Values for Reference:
-# DJANGO_SECRET_KEY=django-insecure-change-this-in-production-xyz123
-# DEBUG=False
-# ALLOWED_HOSTS=talented-determination-production-7954.up.railway.app,udyogworks.in,*.railway.app
-# CORS_ALLOWED_ORIGINS=https://agency-website-az9rbs68a-omkarkangule04-5166s-projects.vercel.app,https://udyogworks.in
-# CSRF_TRUSTED_ORIGINS=https://agency-website-az9rbs68a-omkarkangule04-5166s-projects.vercel.app,https://udyogworks.in
-# FRONTEND_URL=https://udyogworks.in
-# CLOUDINARY_CLOUD_NAME=djtrctbdy
-# CLOUDINARY_API_KEY=348968375949625
-# EMAIL_HOST_USER=sundartir8806@gmail.com
-# DEFAULT_FROM_EMAIL=udyogworks.official@gmail.com
-# GA4_PROPERTY_ID=properties/516753119
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
+
+# PostgreSQL Database Configuration (Railway Public URL)
+DATABASE_URL=postgresql://user:password@host:port/database
+
+# Redis Configuration (Railway Public URL)
+REDIS_URL=redis://default:password@host:port
